--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,10 @@
 
 .title {
     color: rgb(68, 0, 255);
-    transform: translate(120px, 50%);
+    transform: translate(30px, 20px) rotate(20deg);
+    width: 140px;
+    height: 60px;
+    text-decoration-style: wavy;
 }
 body {
     background-color: darkorchid;
