--- a/styles/centerImage.css
+++ b/styles/centerImage.css
@@ -1,9 +1,25 @@
-.centerImage {
-    max-width: auto;
-    max-height: auto;
-    justify-content: center;
-}
+
+
 .resize{
     height: 10rem;
     width: 10rem;
+    padding: 1em;   
+}
+
+.groovy{
+    display:flex;
+    justify-content: center;
+}
+
+.tastyJams{
+    text-size-adjust: 1px;
+    text-align: left;
+}
+.tastyTitle{
+    padding: 0px;
+    margin: 0px;
+}
+.tastyJams {
+    padding: 0px;
+    margin: 0px;
 }
