--- a/styles/warGraphic.css
+++ b/styles/warGraphic.css
@@ -1,6 +1,6 @@
-* {
-    background-color: coral;
-}
+/* * {
+    background-color: coral; */
+/* } */
 
 .RPG {
     background-color: brown;
@@ -10,14 +10,14 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 20%;
+    width: 10%;
     padding-left: 20rem;
     border: 60px solid rgb(248, 2, 2);
     max-width: 25rem;
     max-height: 5rem;
     border-radius: 120px;
     
-        animation: rotation 8s infinite linear;
+        animation: rotation 1s infinite linear;
       }
       
       @keyframes rotation {
@@ -33,9 +33,15 @@
 
 
 .bear {
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    
     border: 35px dotted #5455;
-    max-width: 10rem;
-    max-height: 10rem;
+    max-width: 15rem;
+    max-height: 15rem;
     background: chartreuse;
     border-style: -webkit-animation-delay;
     
